math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__mathit_func.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\mathit{ab \\log cd}"
---
[
  TextTransform(
    tf: Transform(Italic),
    content: Row(
      nodes: [
        IdentifierStr("ab"),
        PseudoOp(
          attr: None,
          left: Some(ThreeMu),
          right: Some(ThreeMu),
          name: "log",
        ),
        IdentifierStr("cd"),
      ],
      attr: None,
    ),
  ),
]
