math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__mathit_greek.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\mathit{\\Alpha\\Beta}"
---
[
  TextTransform(
    tf: Transform(Italic),
    content: IdentifierStr("ΑΒ"),
  ),
]
