math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__mathit_mathrm_nested.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\mathit{\\mathrm{a}b}"
---
[
  TextTransform(
    tf: Transform(Italic),
    content: Row(
      nodes: [
        TextTransform(
          tf: Normal,
          content: IdentifierChar('a', Default),
        ),
        IdentifierChar('b', Default),
      ],
      attr: None,
    ),
  ),
]
