math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__mathrm_mathit_nested.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\mathrm{\\mathit{a}b}"
---
[
  Row(
    nodes: [
      IdentifierChar('𝑎', Default),
      IdentifierChar('b', ForcedUpright),
    ],
    attr: None,
  ),
]
