math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__mathrm_mathit_nested_multi.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\mathrm{ab\\mathit{cd}ef}"
---
[
  TextTransform(
    tf: Normal,
    content: Row(
      nodes: [
        IdentifierStr("ab"),
        TextTransform(
          tf: Transform(Italic),
          content: IdentifierStr("cd"),
        ),
        IdentifierStr("ef"),
      ],
      attr: None,
    ),
  ),
]
