math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__mathrm_sqrt.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\mathrm{\\sqrt xy}"
---
[
  Row(
    nodes: [
      Sqrt(IdentifierChar('x', Upright, false)),
      IdentifierChar('y', Upright, false),
    ],
    attr: None,
  ),
]
