math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__mathrm_subscript.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\mathrm{x_x y_y}"
---
[
  Row(
    nodes: [
      Subscript(
        target: IdentifierChar('x', ForcedUpright),
        symbol: IdentifierChar('x', ForcedUpright),
      ),
      Subscript(
        target: IdentifierChar('y', ForcedUpright),
        symbol: IdentifierChar('y', ForcedUpright),
      ),
    ],
    attr: None,
  ),
]
