math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__matrix.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\begin{pmatrix} x \\\\ y \\end{pmatrix}"
---
[
  Fenced(
    style: None,
    open: Some(StretchableOp('(', Always)),
    close: Some(StretchableOp(')', Always)),
    content: Table(
      content: [
        IdentifierChar('x', Default),
        RowSeparator(None),
        IdentifierChar('y', Default),
      ],
      align: Centered,
      style: None,
    ),
  ),
]
