math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__mspace.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\mspace{1mu}"
---
[
  Space(Length(
    value: 0.055555556,
    unit: Em,
  )),
]
