math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__number_after_circumflex.snap
---
source: math-core/src/latex_parser/parse.rs
expression: x^12
---
[
  Superscript(
    target: IdentifierChar('x', Default),
    symbol: Number("1"),
  ),
  Number("2"),
]
