math-core/src/latex_parser/snapshots/math_core__latex_parser__parse__tests__number_after_lim.snap
---
source: math-core/src/latex_parser/parse.rs
expression: "\\sum\\limits_12"
---
[
  Underset(
    symbol: Number("1"),
    target: Operator(
      op: '∑',
      attr: Some(NoMovableLimits),
      left: None,
      right: None,
    ),
  ),
  Number("2"),
]
